# WiDiT

./: .coveragerc  README.rst  pyproject.toml
.github/workflows/: docs.yml
docs/: api.rst  cli.rst  conf.py  index.rst  training.rst
tests/: test_blocks.py  test_models.py  test_patch.py  test_timesteps.py  test_window.py
widit/: __init__.py  blocks.py  models.py  patch.py  timesteps.py  window.py
